<resources>
    <string name="app_name">Weather App</string>
    <string name="update">Update</string>
    <string name="forecast">Forecast</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>
    <string name="drizzle">Drizzle</string>
    <string name="thunder">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="ash">Ash</string>
    <string name="dust">Dust</string>
    <string name="tornado">Tornado</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="squall">Squall</string>
    <string name="sand">Sand</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="weather_description">Weather Description</string>
    <string name="city">City</string>
    <string name="celcius">Celcius</string>
    <string name="meters_seconds">Meters/Seconds</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country">Country</string>
    <string name="location_error">Location Error</string>
    <string name="c">C</string>
    <string name="m_s">m/s</string>
</resources>