<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="142dp"
        android:layout_height="118dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/weatherScrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cast_ic_notification_forward"
        tools:srcCompat="@drawable/cast_ic_notification_forward" />

    <ScrollView
        android:id="@+id/weatherScrollView"
        android:layout_width="224dp"
        android:layout_height="346dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/longitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude" />

            <TextView
                android:id="@+id/countryNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/weatherDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_description"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tempTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/windTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meters_seconds"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="getWeatherData"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/forecastButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="openForecast"
        android:text="@string/forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>